<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/blogs"
            android:icon="@drawable/ic_blog"
            android:title="@string/blog" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacyolicy" />


    </group>
</menu>