<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_home"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.welcome.WelcomeFragment">


        <LinearLayout
            android:id="@+id/text_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginBtn"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                style="@style/textViewBigWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/textViewDescriptionWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_blog_app"

                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_100sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                style="@style/btnWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/createBtn"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/log_in" />

            <include layout="@layout/or_layout" />

            <Button
                android:id="@+id/createBtn"
                style="@style/btnOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/sign_up" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_semi_dark"
                android:text="@string/remind_me_later"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:id="@+id/remindMeLater"/>

        </LinearLayout>
    </LinearLayout>

</layout>