<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_user" />

        <RelativeLayout
            android:id="@+id/cmt_re_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/like_img"
            android:layout_toEndOf="@id/user_dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/user_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/avenir_next_medium"
                android:padding="1dp"
                android:text="@string/comment"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_comment"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_comment"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/comment_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/likes"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:padding="5dp"
                    android:text="@string/reply"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/delete_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/delete"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone" />
            </LinearLayout>


            <TextView
                android:id="@+id/view_replies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:fontFamily="@font/poppins_semibold"
                android:padding="5dp"
                android:text="@string/view_replies"
                android:textSize="12sp"
                android:textStyle="italic" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/like_img"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_like" />

       <!-- <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cmt_re_lyt"
            android:layout_toEndOf="@id/user_dp"
            android:id="@+id/recylerReply"/>-->
        <RelativeLayout
            android:id="@+id/reply_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cmt_re_lyt"
            android:layout_toEndOf="@id/user_dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingEnd="10dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry,UnusedAttribute"
            tools:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_dp_reply"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_user" />


            <TextView
                android:id="@+id/username_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/user_dp_reply"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/user_comment_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_reply"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/user_dp_reply"
                android:fontFamily="@font/avenir_next_medium"
                android:padding="1dp"
                android:text="@string/comment"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_comment_reply"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins"
                android:textSize="12sp" />

        </RelativeLayout>


    </RelativeLayout>
</layout>