<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root_lyt"
    android:background="@color/color_white"
    android:layout_height="match_parent">


    <include layout="@layout/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLay"
        android:layout_above="@id/bottom_bar"
        />




    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_comments"
        android:visibility="gone"
        tools:visibility="visible" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_bar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_user"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:id="@+id/user_dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/comment_as"
            android:textColor="@color/black"
            android:id="@+id/input_comment"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/user_dp"
            android:layout_marginEnd="70dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textSize="12sp"
            android:autofillHints="@string/comment_as"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@color/colorAccent"
            android:enabled="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/post"
            tools:ignore="RelativeOverlap" />

        <ProgressBar
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:id="@+id/progress_bar"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            />

    </RelativeLayout>


</RelativeLayout>
