<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_background_home"
        tools:context=".ui.login.LoginFragment">




        <LinearLayout
            android:id="@+id/bottom_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          android:background="@color/color_white"
            android:orientation="vertical"
            android:paddingTop="@dimen/_30sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                style="@style/textViewBigWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/bottom_lyt"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:text="Create Account"
                android:textAlignment="textStart"
                tools:ignore="HardcodedText" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/name">

                <EditText
                    android:id="@+id/etName"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/name"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    tools:ignore="LabelFor"
                    android:inputType="textPersonName" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    tools:ignore="LabelFor"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/createBtn"
                style="@style/btnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/sign_up" />

            <include layout="@layout/or_layout" />


            <include
                android:id="@+id/otherSigninOption"
                layout="@layout/layout_fb_google" />
        </LinearLayout>

    </LinearLayout>
</layout>